--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon"/>
+    <link rel="shortcut icon" href="favicon.ico" title="Favicon"/>
 
     <!-- Main CSS Files -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Namari Color CSS -->
-    <link rel="stylesheet" href="css/namari-color.css">
+    <link rel="stylesheet" href="namari-color.css">
 
     <!--Icon Fonts - Font Awesome Icons-->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome.min.css">
 
     <!-- Animate CSS-->
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="animate.css">
 
     <!--Google Webfonts-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel="stylesheet" type="text/css">
