--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                     <!--Logo-->
                     <div id="logo">
-
+                        <h1>Troy Young<h1/>
                         <!--Logo that is shown on the banner-->
                         <img src="images/logo.png" id="banner-logo" alt="Landing Page"/>
                         <!--End of Banner Logo-->
