--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <!--End of Banner Logo-->
 
                         <!--The Logo that is shown on the sticky Navigation Bar-->
-                        <img src="logo-2.png" id="navigation-logo" alt="Landing Page"/>
+                        <img src="logo.png" id="navigation-logo" alt="Landing Page"/>
                         <!--End of Navigation Logo-->
 
                     </div>
