--- a/index.html
+++ b/index.html
@@ -250,10 +250,8 @@
                 <div class="col-3">
                     <!--User Testimonial-->
                     <blockquote class="testimonial text-right bigtest">
-                        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua</q>
-                        <footer>— John Doe, Happy Customer</footer>
+                        <q>Intellectual growth should commence at birth and cease only at death</q>
+                        <footer>— Albert Einstein</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
 
