--- a/index.html
+++ b/index.html
@@ -298,10 +298,8 @@
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/user-images/user-1.jpg" alt="User"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
-                    <footer>John Doe - Happy Customer</footer>
+                    <q>Developed and designed a wireframe for a mobile event-based social application. </q>
+                    <footer>Polyfrog</footer>
                 </blockquote>
                 <!-- End of Testimonial-->
 
