--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua</q>
-                    <footer>Roslyn Doe - Happy Customer</footer>
+                    <footer>iCompliment</footer>
                 </blockquote>
                 <!-- End of Testimonial-->
 
