--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
 
                 <!--Call to Action-->
-                <a href="#" class="button">Resumé</a>
+                <a href="Troy Young Resume.pdf" class="button">Download Resumé</a>
                 <!--End Call to Action-->
 
             </div>
