--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
 
                 <!--Call to Action-->
-                <a href="Troy Young Resume.pdf" class="button">Download Resumé</a>
+                <a href="Troy Young Resume.pdf" download="TroyYoungResume" class="button">Download Resumé</a>
                 <!--End Call to Action-->
 
             </div>
