--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
                                 <a href="#education">Education</a>
                             </li>
                             <li>
-                                <a href="#services">Projects</a>
+                                <a href="#projects">Projects</a>
                             </li>
                             <li>
-                                <a href="#testimonials">About</a>
+                                <a href="#about">About</a>
                             </li>
                             <li>
-                                <a href="#clients">Gallery</a>
+                                <a href="#gallery">Gallery</a>
                             </li>
                             <li>
-                                <a href="#pricing">Contact</a>
+                                <a href="#contact">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -411,7 +411,7 @@
         <!--End of Gallery-->
 
         <!--Pricing Tables-->
-        <section id="pricing" class="secondary-color text-center scrollto clearfix ">
+        <section id="contact" class="secondary-color text-center scrollto clearfix ">
             <div class="row clearfix">
 
                 <div class="section-heading">
