--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
                     <p>I graduated from Aragon High School, class of 2014, with a GPA of 4.23, after taking courses such as AP Calculus, Multivariable Calculus, AP Physics, AP Computer Science, AP Psychology, AP U.S. History, and Honors Spanish.
                     </p>
                     <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
-                    <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
+                    <!--<a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
                         WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
-                    </a>
+                    </a>-->
                 </div>
                 <!--End Content Right Side-->
 
@@ -292,13 +292,13 @@
 
                 <div class="section-heading">
                     <h3>Projects</h3>
-                    <h2 class="section-title">What I've Designed and Made</h2>
+                    <h2 class="section-title">What I've Designed and Developed</h2>
                 </div>
 
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/user-images/user-1.jpg" alt="User"/>
-                    <q>Developed and designed a wireframe for a mobile event-based social application. </q>
+                    <p>A mobile event-based social application to help individuals meet others who are interested in attending the same local events</p>
                     <footer>Polyfrog</footer>
                 </blockquote>
                 <!-- End of Testimonial-->
@@ -306,20 +306,17 @@
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/user-images/user-2.jpg" alt="User"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
+                    <p>A novel social application built around sending anonymous compliments to those around you that encourages spreading positivty</p>
                     <footer>iCompliment</footer>
                 </blockquote>
+
                 <!-- End of Testimonial-->
 
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/user-images/user-3.jpg" alt="User"/>
-                    <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua</q>
-                    <footer>Thomas Doe - Happy Customer</footer>
+                    <p>A web application to facilitate the selective exchange of contact information and avoid any awkward interactions</p>
+                    <footer>ContactExchange</footer>
                 </blockquote>
                 <!-- End of Testimonial-->
 
@@ -337,9 +334,7 @@
                     <div class="section-heading">
                         <h3>About Me</h3>
                         <h2 class="section-title">Who I Am</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <p class="section-subtitle">Musician. Athlete. Foodie. Explorer.</p>
                     </div>
 
                 </div>
@@ -415,12 +410,15 @@
             <div class="row clearfix">
 
                 <div class="section-heading">
-                    <h3>YOUR CHOICE</h3>
-                    <h2 class="section-title">We have the right package for you</h2>
+                    <h3>Contact Information</h3>
+                    <h2 class="section-title">Give me a call or shoot me a text or email. I look forward to hearing from you! </h2>
                 </div>
 
+                <p>Phone: (650)678-9803</p>
+                <p>Email: troyeliyoung@gmail.com</p>
+
                 <!--Pricing Block-->
-                <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
+                <!--<div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="pricing-block-content">
                         <h3>Personal</h3>
                         <p class="pricing-sub">The standard version</p>
@@ -437,11 +435,11 @@
                         </ul>
                         <a href="#" class="button">BUY TODAY</a>
                     </div>
-                </div>
+                </div>-->
                 <!--End Pricing Block-->
 
                 <!--Pricing Block-->
-                <div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
+                <!--<div class="pricing-block featured col-3 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="pricing-block-content">
                         <h3>Student</h3>
                         <p class="pricing-sub">Most popular choice</p>
@@ -458,11 +456,11 @@
                         </ul>
                         <a href="#" class="button">BUY TODAY</a>
                     </div>
-                </div>
+                </div>-->
                 <!--End Pricing Block-->
 
                 <!--Pricing Block-->
-                <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
+                <!--<div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
                     <div class="pricing-block-content">
                         <h3>Business</h3>
                         <p class="pricing-sub">For the whole team</p>
@@ -479,7 +477,7 @@
                         </ul>
                         <a href="#" class="button">BUY TODAY</a>
                     </div>
-                </div>
+                </div>-->
                 <!--End Pricing Block-->
 
             </div>
@@ -494,10 +492,10 @@
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
 
-            <p id="copyright" class="col-2">Made with love by <a href="https://www.shapingrain.com">ShapingRain</a></p>
+            <!--<p id="copyright" class="col-2">Made with love by <a href="https://www.shapingrain.com">ShapingRain</a></p>-->
 
             <!--Social Icons in Footer-->
-            <ul class="col-2 social-icons">
+            <ul class="col-1 social-icons">
                 <li>
                     <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
                         <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
