--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <img src="images/user-images/user-3.jpg" alt="User"/>
-                    <p>A web application to facilitate the selective exchange of contact information and avoid any awkward interactions</p>
+                    <p>A web application to facilitate the selective exchange of contact information and avoid any lengthy or awkward interactions</p>
                     <footer>ContactExchange</footer>
                 </blockquote>
                 <!-- End of Testimonial-->
