--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
                 </div>
             </div>
         </div><!--End of Header-->
+       
+        <img src="banner-img-1.jpg" style="width:385x;height:475px;">
 
         <!--Banner Content-->
         <div id="banner-content" class="row clearfix">
